--- a/index.html
+++ b/index.html
@@ -483,12 +483,60 @@ const firebaseConfig = {
     window.firebaseRef = ref;
     window.firebaseOnValue = onValue;
     window.firebaseReady = true;
-window.saveAllData = async function() { ... }
 
-  window.handleImageUpload = function(input) { ... }
-  
-  window.handleImageUrl = function(input) { ... }
+// [이미지 처리 함수 등록]
+    window.handleImageUpload = function(input) {
+        if (input.files && input.files[0]) {
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                const previewBox = document.getElementById('img-preview-box');
+                if(previewBox) {
+                    previewBox.style.display = 'block';
+                    previewBox.style.backgroundImage = `url('${e.target.result}')`;
+                }
+                document.getElementById('inp-img-final').value = e.target.result;
+                document.getElementById('inp-img-url').value = '';
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    };
 
+    window.handleImageUrl = function(input) {
+        const url = input.value.trim();
+        if (url) {
+            const previewBox = document.getElementById('img-preview-box');
+            if(previewBox) {
+                previewBox.style.display = 'block';
+                previewBox.style.backgroundImage = `url('${url}')`;
+            }
+            document.getElementById('inp-img-final').value = url;
+            document.getElementById('inp-img-file').value = '';
+        }
+    };
+
+    // [데이터 저장 함수 수정]
+    window.saveAllData = async function() {
+        const data = {
+            charDB: window.charDB || [],
+            categoryDB: window.categoryDB || [],
+            termDB: window.termDB || [],
+            relationDB: window.relationDB || [],
+            userDB: window.userDB || [],
+            globalConfig: window.globalConfig || {}
+        };
+
+        if (window.saveToFirebase) {
+            try {
+                await window.saveToFirebase(data);
+                console.log("데이터 저장 성공");
+            } catch (e) {
+                console.error("데이터 저장 중 오류:", e);
+                alert("저장 실패: " + e.message);
+            }
+        } else {
+            console.error("Firebase 저장 함수(saveToFirebase)를 찾을 수 없습니다.");
+        }
+    };
 onValue(ref(db, 'characters'), (snapshot) => {
     const data = snapshot.val();
     if (data) {
