--- a/index.html
+++ b/index.html
@@ -1900,17 +1900,16 @@ window.onYouTubeIframeAPIReady = function() {
              savedId = '5qap5aO4i9A'; // (예시: Lofi hip hop 라디오 - 재생 잘 됨)
         }
 
-        player = new YT.Player('youtube-player', {
-            height: '0',
-            width: '0',
-            videoId: savedId, // 여기에 재생 가능한 ID가 들어가야 합니다.
-            playerVars: {
-                'autoplay': 0,
-                'controls': 0,
-                'loop': 1,
-                'playlist': savedId,
-                'origin': window.location.origin // 이 줄을 추가하면 노란색 경고가 줄어듭니다.
-            },
+player = new YT.Player('youtube-player', {
+    height: '0',
+    width: '0',
+    videoId: extractVideoId(globalConfig.bgmUrl) || '',
+    playerVars: {
+        'autoplay': 0,
+        'controls': 0,
+        'disablekb': 1,
+        'origin': location.origin  // 이 줄을 추가하세요!
+    },
             events: {
                 'onReady': onPlayerReady,
                 'onError': (e) => {
