--- a/index.html
+++ b/index.html
@@ -1026,6 +1026,7 @@ window.onload = function() {
         }
     }
 
+// [데이터 저장 함수 수정] - 타임스탬프 추가
 window.saveAllData = async function() {
     const data = {
         charDB: window.charDB || [],
@@ -1034,8 +1035,7 @@ window.saveAllData = async function() {
         relationDB: window.relationDB || [],
         userDB: window.userDB || [],
         globalConfig: window.globalConfig || {},
-        // [추가] 마지막 수정 시간 기록
-        updatedAt: Date.now() 
+        updatedAt: Date.now() // ✅ 이 줄이 반드시 있어야 서버와 동기화가 정상 작동합니다.
     };
 
     // 1. 로컬 스토리지 저장
@@ -1045,10 +1045,9 @@ window.saveAllData = async function() {
     if (window.saveToFirebase) {
         try {
             await window.saveToFirebase(data);
-            console.log("✅ 데이터 동기화 완료");
+            console.log("✅ 서버와 동기화 완료 (" + new Date(data.updatedAt).toLocaleTimeString() + ")");
         } catch (e) {
-            console.error("❌ 저장 실패 (권한 문제일 수 있음):", e);
-            alert("서버 저장에 실패했습니다. (콘솔 확인 필요)");
+            console.error("서버 저장 중 오류:", e);
         }
     }
 };
