--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,7 @@ function openDetail(id) {
 let userDB = JSON.parse(localStorage.getItem('aotu_user_db')) || [
     { code: "0102M", name: "모렌" },
     { code: "AdAstra", name: "아스트라" }
+    { code: "ToRose", name: "로스" }
 ];
 
 window.checkPassword = function() {
