--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,7 @@ function openDetail(id) {
 // 기존 USER_KEYS 대신 userDB 사용
 let userDB = JSON.parse(localStorage.getItem('aotu_user_db')) || [
     { code: "0102M", name: "모렌" },
-    { code: "AdAstra", name: "아스트라" }
+    { code: "AdAstra", name: "아스트라" },
     { code: "ToRose", name: "로스" }
 ];
 
