--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ window.relationDB = data.relationDB || [];
 // [수정됨] 서버 데이터와 기본 관리자 데이터를 합치는 로직
 const serverUsers = data.userDB || [];
 const defaultUsers = [
-    { code: "0102", name: "모렌" },
+    { code: "Ero_|v|0I2)^/", name: "모렌" },
     { code: "AdAstra", name: "아스트라" },
     { code: "ToRose", name: "로스" }
 ];
